--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,17 @@
+### react ###
+.DS_*
+*.log
+logs
+**/*.backup.*
+**/*.back.*
+
 node_modules
+bower_components
+
+*.sublime*
+
+psd
+thumb
+sketch
+node_modules/@jridgewell/gen-mapping/dist/gen-mapping.mjs
+node_modules/@jridgewell/gen-mapping/dist/gen-mapping.mjs
