--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,37 @@
+# Node
 node_modules/
-.DS_Store
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+pnpm-debug.log*
+
+# Production build
+dist/
+.build/
+.next/
+out/
+
+# Logs
+logs
 *.log
-*.backup.*
-public/
+
+# System files
+.DS_Store
+Thumbs.db
+
+# Environment variables
+.env
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+
+# IDEs
+.vscode/
+.idea/
+*.swp
+
+# Misc
+.cache/
+.vercel/
+coverage/
